--- a/assignment8/src/app/todo-list/todo-list.component.html
+++ b/assignment8/src/app/todo-list/todo-list.component.html
@@ -1,1 +1,32 @@
-<p>todo-list works!</p>
+<div class="container">
+    <h3>List All Students</h3>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Title</th>
+          <th scope="col">Description</th>
+          <th scope="col">dueDate</th>
+          <th scope="col">Time</th>
+          <th scope="col">Complete</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of studentsData">
+          <td>{{item.id}}</td>
+          <td>{{item.Title}}</td>
+          <td>{{item.Description}}</td>
+          <td>{{item.dueDate}}</td>
+          <td>{{item.Time}}</td>
+          <td>{{item.Complete}}</td>
+          <td style="display: flex">
+              <button type="button" class="btn btn-success" [routerLink]="[ '/get/${item.id}']">Details</button>
+              <button type="button" class="btn btn-warning btn-sm" [routerLink]="[ '/edit/${item.id}']">Edit</button>
+              <button type="button" class="btn btn-danger btn-sm ml-1" (click)="delete(item)">Delete</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+   
+    <button type="button" class="btn btn-success" [routerLink]="[ '/create']">Add Student</button>
+  </div>
