--- a/assignment8/src/app/todo-create/todo-create.component.html
+++ b/assignment8/src/app/todo-create/todo-create.component.html
@@ -1,30 +1,1 @@
-<div class="container">
- 
-    <h3>Create Todo Record</h3>
-    
-        <div class="form-group">
-            <label for="Title">Title</label>
-            <input type="text" class="form-control" id="title" [(ngModel)]="data.title" placeholder="Enter Title">
-        </div>
-        <div class="form-group">
-            <label for="Description">Description</label>
-            <input type="text" class="form-control" id="description" [(ngModel)]="data.description" placeholder="Enter description">
-        </div>
-        <div class="form-group">
-            <label for="dueDate">dueDate</label>
-            <input type="date" class="form-control" id="dueDate" [(ngModel)]="data.dueDate" placeholder="Enter dueDate">
-        </div>
-        <div class="form-group">
-            <label for="Time">Time</label>
-            <input type="time" class="form-control" id="time" [(ngModel)]="data.time" placeholder="Enter time">
-        </div>
-        <div class="form-group">
-            <label for="Complete">Complete</label>
-            <select name="Complete" ng-model="data.complete">
-                <option value="option-1">Incomplete</option>
-                <option value="option-2">Complete</option>
-            </select><br>
-        </div>
-        <button type="submit" class="btn btn-primary" (click)="submitForm()">Add</button>
-</div>    
- 
+<p>todo-create works!</p>
