--- a/assignment8/src/app/todo-create/todo-create.component.html
+++ b/assignment8/src/app/todo-create/todo-create.component.html
@@ -22,5 +22,6 @@
             </select><br>
         </div>
         <button type="submit" class="btn btn-primary" (click)="submitForm()">Add</button> 
+        <button type="button" class="btn btn-warning btn-sm" [routerLink]="[ '/list']">List</button>
     </div>  
  
