--- a/assignment8/src/app/todo-edit/todo-edit.component.html
+++ b/assignment8/src/app/todo-edit/todo-edit.component.html
@@ -1,30 +1,27 @@
 <div class="container">
-    <h3>List All Todos</h3>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Id</th>
-          <th scope="col">Title</th>
-          <th scope="col">Description</th>
-          <th scope="col">Due Date Time</th>
-          <th scope="col">Complete</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let item of TodoData">
-          <td>{{item.id}}</td>
-          <td>{{item.Title}}</td>
-          <td>{{item.Description}}</td>
-          <td>{{item.dueDate}}</td>
-          <td>{{item.Complete}}</td>
-          <td style="display: flex">
-              <button type="button" class="btn btn-success" [routerLink]="[ '/get/${item.id}']">Details</button>
-              <button type="button" class="btn btn-warning btn-sm" [routerLink]="[ '/edit/${item.id}']">Edit</button>
-              <button type="button" class="btn btn-danger btn-sm ml-1" (click)="delete(item)">Delete</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+ 
+    <h3>Edit Todo Record</h3>
+        <div class="form-group">
+            <label for="Title">Title</label>
+            <input type="text" class="form-control" id="title" [(ngModel)]="data.title" placeholder="Enter Title" disabled="True">
+        </div>
+        <div class="form-group">
+            <label for="Description">Description</label>
+            <input type="text" class="form-control" id="description" [(ngModel)]="data.description" placeholder="Enter description" disabled="True">
+        </div>
+        <div class="form-group">
+            <label for="dueDate">Due datetime</label>
+            <input type="datetime" class="form-control" id="dueDate" [(ngModel)]="data.dueDate" placeholder="Enter dueDate" disabled="True">
+        </div>
+        <div class="form-group">
+            <label for="Complete">Status</label> &nbsp;
+            <select name="Complete" ng-model="data.Complete">
+                <option value="Incomplete" >Incomplete</option>
+                <option value="Complete" ng-model="data.Complete">Complete</option>
+            </select><br>
+        </div>
+        <button type="submit" class="btn btn-success" (click)="update()">Update</button>
+        <button type="submit" class="btn btn-warning ml-1" [routerLink]="[ '/list']">Cancel</button>
+</div>
    
-    <button type="button" class="btn btn-success" [routerLink]="[ '/create']">Add Todo</button>
-  </div>
+ 
