--- a/assignment8/src/app/todo-edit/todo-edit.component.html
+++ b/assignment8/src/app/todo-edit/todo-edit.component.html
@@ -15,10 +15,7 @@
         </div>
         <div class="form-group">
             <label for="Complete">Status</label> &nbsp;
-            <select name="Complete" ng-model="data.Complete">
-                <option value="Incomplete" >Incomplete</option>
-                <option value="Complete" ng-model="data.Complete">Complete</option>
-            </select><br>
+            <input type="text" class="form-control" id="Complete" [(ngModel)]="data.Complete" placeholder="Status">
         </div>
         <button type="submit" class="btn btn-success" (click)="update()">Update</button>
         <button type="submit" class="btn btn-warning ml-1" [routerLink]="[ '/list']">Cancel</button>
